# compiler-evaluation-experiments

./: .gitignore  README.md  abstract_ast.py  aggregate.py  ast.py  benchmarks.py  build.py  c_gen_lore.py  c_generator.py  calculate_n_mutations.py  calculate_n_samples_geometric.py  check.py  code_to_xls.py  codegen.py  codelet_generator.py  color_scheme.py  compare-with-real.py  compilers.py  concrete_ast.py  config.py  dependence_analysis.py  dependence_graph.py  determine_n_iterations.py  dodo.py  find_iterator.py  format.py  gen-lore-output.py  generate-1d.py  generate-2-2-ops.py  generate-3-ops.py  generate-4-ops.py  generate-code.py  generate-matmul-code.py  generate-script.py  log_util.py  main.c  main.py  measure.py  merge_results.py  merge_src_and_code.py  (+23 more)
code-generation-scripts/: 3mm93.py  cnv243.py  conv2d-examples-20221009.py  conv2d-linearize-examples-20221016.py  conv2d-small-inner-20221002.py  liv1113.py  lshape.py  matmul-hardcode-nk-20220925.py  matmul-var-data.py  more-benchmarks.py  nrm261.py  recurrence-chained-20220730.py  recurrence-chained-fullness-20220821.py  recurrence-coupled-fullness-20220821.py  recurrence-coupled-low-fullness-20220905.py  recurrence-explore-20220717.py  recurrence-fullness-20220814.py  reductions-add-dependency.py  reductions-dbl-cycle-and-extra-dep.py  reductions-dbl-cycle.py  reductions-fix-dsize-fma.py  reductions-fix-dsize-reusable-arrays-1-25-unique.py  reductions-fix-dsize-reusable-arrays-20-50-reuse.py  reductions-fix-dsize-reusable-arrays.py  reductions-fix-dsize.py  reductions-no-coupling-20220730.py  reductions-rose.py  reductions-rs-fe-explore-dbl-scalars.py  reductions-rs-fe-explore-int-scalars.py  reductions-rs-fe-explore.py  reductions-tpl-cycle.py  reductions-unique-arrays-dbl-scalars.py  reductions-unique-arrays-int-scalars.py  reductions-unique-arrays.py  reductions.py  s1221.py  s151s.py  s151s_v2.py  s242.py  s254.py  (+2 more)
codelet-template/: core.template.c  main.template.c  wrapper.template.c
codelet-template-int-inputs/: c_generator.py  core.template.c  wrapper.template.c
convolution/: parse-stability.py  report.py
dummy/: dummy.h
experiment-setup/: calculate_n_mutations.py  calculate_n_samples.py
experiments/: interchange.py  scalar-expansion.py  unroll-and-jam.py  unroll.py
induction-variable/: ast.py  benchmarks.py  codegen.py  debug.c  format.py  induction.py  main.py  meson.template  report-runtime-for-paper.py  report.py  run.c.template  test.p00.v02.c  test.p00.v06.c  test.p00.v07.c  test.p01.v03.c  test.p01.v04.c  test.p01.v05.c  test.p01.v07.c  test.p01.v09.c  test.p02.v03.c  test.p02.v04.c  test.p02.v07.c  test.p02.v08.c  test.p03.v02.c  test.p03.v03.c  test.p03.v04.c  test.p03.v06.c  test.p03.v07.c  test.p03.v08.c  test.p03.v09.c  test.p04.v01.c  test.p04.v03.c  test.p04.v07.c  test.p05.v02.c  test.p05.v06.c  test.p05.v07.c  test.p05.v08.c  test.p05.v09.c  test.p06.v00.c  test.p06.v02.c  (+21 more)
lib/: Makefile  measure.c
loops/: convolution.loop  multiple.loop  simple.loop
nan-debug/: .doit.db  dodo.py  p0002.i0000.m0000.c  p0002.i0000.wrapper.c  patterns.py
old-implementations/: aggregate.py  concrete_ast.py
prelim/: meson.build  report-runtime.py  report.py
regenerate/: generate-c.py  regenerate-interchange.py  regenerate-unroll.py
report/: cost_model.py  generate.py  generate_v2.py  peer_metrics.py  peer_rank.py  peer_speedup.py  plot-consistency-one-dir.py  runtime.py  util.py  vector_rate.py  vector_speedup.py  vectorizable.py
single-loop/: benchmarks.py  check.py  meson.build  report-runtime-for-paper.py  report.py  test.p00.v00.c  test.p00.v02.c  test.p01.v01.c  test.p01.v02.c  test.p01.v03.c  test.p02.v02.c  test.p04.v00.c  test.p05.v00.c  test.p05.v02.c  test.p05.v03.c  test.p06.v00.c  test.p06.v02.c  test.p07.v00.c  test.p07.v01.c  test.p07.v03.c  test.p08.v03.c  test.p09.v02.c  test.p09.v03.c
skeletons/: generate.py  matmul.py  recurrence.py  wip.py
summaries/: lshape.txt
system/: abstract_ast.py  concrete_ast.py  coupled_group.py  debug.py  deeply-nested.loop  dep-test-z3.py  dep_range.py  dependence.py  dependence2.py  dependence_analysis.py  dependence_graph.py  interchange.py  loop_analyzer.py  loop_analyzer2.py  parser.py  run.py  simple_dep2.py  simple_formatter.py  simple_formatter_v2.py  simple_gen.py  test-codegen.py  test-dep.py  test-end-to-end.py  test-interchange-2.py  test-parser.py  test.loop  test.py  test2.loop  v2.loop  v3.loop  valid-interchange.loop  variable_map.py  z3_helper.py  z3_helper2.py
test/: naive_impl.c  naive_impl.h  naive_impl.h~
unroll-generate/: config.py  generate.py  meson.build  test.p00.v01.c  test.p00.v02.c  test.p00.v05.c  test.p00.v06.c  test.p01.v00.c  test.p01.v03.c  test.p01.v05.c  test.p01.v08.c  test.p01.v09.c  test.p02.v00.c  test.p02.v03.c  test.p02.v04.c  test.p02.v05.c  test.p02.v06.c  test.p02.v09.c  test.p02.v10.c  test.p03.v00.c  test.p03.v04.c  test.p03.v05.c  test.p03.v06.c  test.p03.v07.c  test.p03.v08.c  test.p03.v09.c  test.p04.v00.c  test.p04.v01.c  test.p04.v02.c  test.p04.v03.c  test.p04.v04.c  test.p04.v05.c  test.p04.v06.c  test.p05.v00.c  test.p05.v04.c  test.p05.v05.c  test.p05.v06.c  test.p05.v07.c  test.p05.v08.c  test.p05.v09.c  (+25 more)
util/: init.h
(+8619 files in other folders)
